deploy_kube-system/mutatingwebhook-ca-bundle.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: pod-identity-webhook
  namespace: kube-system
webhooks:
- name: pod-identity-webhook.amazonaws.com
  failurePolicy: Ignore
  clientConfig:
    service:
      name: pod-identity-webhook
      namespace: kube-system
      path: "/mutate"
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUMyakNDQWNJQ0NRRERadFN0SjFRejFqQU5CZ2txaGtpRzl3MEJBUXNGQURBdk1TMHdLd1lEVlFRRERDUncKYjJRdGFXUmxiblJwZEhrdGQyVmlhRzl2YXk1cmRXSmxMWE41YzNSbGJTNXpkbU13SGhjTk1qQXdOekk0TVRZdwpOakUyV2hjTk1qRXdOekk0TVRZd05qRTJXakF2TVMwd0t3WURWUVFERENSd2IyUXRhV1JsYm5ScGRIa3RkMlZpCmFHOXZheTVyZFdKbExYTjVjM1JsYlM1emRtTXdnZ0VpTUEwR0NTcUdTSWIzRFFFQkFRVUFBNElCRHdBd2dnRUsKQW9JQkFRRGZnYWJ4aWY5TnZwSXkwZXl0VElEdUhZU0hZVjFFZW14MXhGM1VIL3d4bG9IM0tPc1dremw0QnJHZgpVOTNWZ0hnbEU5Rk [...]
  rules:
  - operations: [ "CREATE" ]
    apiGroups: [""]
    apiVersions: ["v1"]
    resources: ["pods"]
